# todolist-python-oop-api

./: .env.example  .gitignore  MIGRATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_api.py
alembic/: env.py
alembic/versions/: 5ff3bf7f75ca_remove_autoincrement_for_id_reuse.py  95f7d501bc4b_initial_migration_create_projects_and_.py  d22d34063efa_add_closed_at_field_to_dbtask.py
scripts/: call_auto_close_api.sh  run_auto_close.sh
src/todolist/: __init__.py  main.py
src/todolist/api/: __init__.py  dependencies.py  exception_handlers.py  main.py  routers.py
src/todolist/api/controller_schemas/: __init__.py  common.py
src/todolist/api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
src/todolist/api/routers/: tasks.py  (+4 more)
src/todolist/cli/: __init__.py  autoclose_task.py  commands.py
src/todolist/config/: settings.py
src/todolist/db/: __init__.py  database.py  session.py
src/todolist/models/: __init__.py  db_base.py  db_project.py  db_task.py  project.py  task.py
src/todolist/repositories/: __init__.py  db_project_repository.py  db_task_repository.py  project_repository.py  task_repository.py
src/todolist/services/: __init__.py  db_project_service.py  db_task_service.py  project_service.py  task_service.py
src/todolist/utils/: __init__.py  exceptions.py  id_generator.py  timezone.py  validators.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/models/: test_project.py  test_task.py
tests/unit/repositories/: test_task_repository.py
tests/unit/services/: test_task_service.py
(+12 files in other folders)
